www/src/styles/bootstrap/style-override.scss
// Override Bootstrap's styles
body {
  color: var(--body-color);
  background: var(--body-bg);
  transition: color, background 0.2s;
}

mark {
  padding: 0;
  font-weight: bold;
  color: currentColor;
}

// Forms
.form-control,
.form-control:focus {
  color: var(--body-color);
  background: var(--body-bg);
}

.form-control:disabled {
  background: var(--body-bg);
}

// Dropdown menu
.dropdown-menu {
  width: 100%;
  padding: 0.1rem 0;
  box-shadow: 0 2px 6px rgba(#000, 0.25);

  @include scrollable-y;

  @include night-mode {
    box-shadow: 0 2px 6px rgba(#000, 0.75);
  }
}

.dropdown-item {
  color: var(--body-color);
  cursor: pointer;

  &:hover,
  &:focus,
  &.dropdown-selected {
    color: theme-color();
    background: var(--gray-lightest);
  }

  &.dropdown-selected:active {
    color: #fff;
    background: theme-color();
  }

  @include touchscreen-only {
    $touch-horizontal-padding: 0.5rem;

    padding-top: $touch-horizontal-padding;
    padding-bottom: $touch-horizontal-padding;
    border-bottom: 1px solid var(--gray-lighter);

    &:last-child {
      border-bottom: 0;
    }
  }
}

// Alerts
@mixin alert-colors($name) {
  .alert-#{$name} {
    color: var(--alert-#{$name}-color);
    border-color: var(--alert-#{$name}-border);
    background: var(--alert-#{$name}-background);
  }
}

@each $color in $alert-override-themes {
  @include alert-colors($color);
}

